# kino

./: .gitignore  Cargo.toml
src/: app.rs  error.rs  home.rs  main.rs  player.rs  utils.rs  video.rs  widgets.rs
src/home/: movies.rs  pages.rs
src/utils/: filter.rs  icons.rs  typo.rs
src/widgets/: menu.rs  slider.rs
